# bindeperror6

./: Cargo.toml
mybindep/: Cargo.toml
mybindep/src/: main.rs
myshareddep/: Cargo.toml
